# graphics_system

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/app/: basic_shader.cpp  basic_shader.hpp  shader_editor.cpp  shader_editor.hpp
src/gui/: gui_toolkit.cpp  gui_toolkit.hpp  gui_toolkit_builder.cpp  gui_toolkit_builder.hpp
src/gui/component/: gui.hpp  text_editor.cpp  text_editor.hpp
src/gui/imgui/: imgui_toolkit.cpp  imgui_toolkit.hpp  imgui_toolkit_builder.cpp  imgui_toolkit_builder.hpp
src/gui/imgui/component/: imgui_text_editor.cpp  imgui_text_editor.hpp
src/object/: formatted_object.cpp  formatted_object.hpp  object.cpp  object.hpp  polygon.cpp  polygon.hpp
src/object/loader/: mesh_loader.cpp  mesh_loader.hpp  wavefront_obj_loader.cpp  wavefront_obj_loader.hpp
src/shader/: fragment_shader.cpp  fragment_shader.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  vertex_shader.cpp  vertex_shader.hpp
src/utility/: OpenGL.h  iterator.cpp  iterator.hpp
src/window_system/: glfw_glew_system.cpp  glfw_glew_system.hpp  window.cpp  window.hpp  window_builder.cpp  window_builder.hpp  window_container.cpp  window_container.hpp  window_generator.cpp  window_generator.hpp  window_manager.cpp  window_manager.hpp  window_system.cpp  window_system.hpp  window_system_extension.hpp  window_toolkit_builder.cpp  window_toolkit_builder.hpp
src/window_system/glew/: glew_extension.cpp  glew_extension.hpp
src/window_system/glfw/: glfw_window.cpp  glfw_window.hpp  glfw_window_builder.cpp  glfw_window_builder.hpp  glfw_window_container.cpp  glfw_window_container.hpp  glfw_window_generator.cpp  glfw_window_generator.hpp  glfw_window_system.cpp  glfw_window_system.hpp  glfw_window_toolkit_builder.cpp  glfw_window_toolkit_builder.hpp
